add a checkbox for billing address same as shipping address

--- a/03-frontend/angular-ecommerce/src/app/components/checkout/checkout.component.html
+++ b/03-frontend/angular-ecommerce/src/app/components/checkout/checkout.component.html
@@ -76,6 +76,60 @@
                     </div>
                 </div>
 
+                <div class="mb-5">
+                    <input type="checkbox" class="me-4" id="checkbox__sameAddress" (change)="copyShippingAddressToBillingAddress($event)">
+                    <label for="checkbox__sameAddress">
+                        <span>Billing Address same as Shipping Address</span>
+                    </label>
+                </div>
+
+                <div formGroupName="billingAddress" class="form-area">
+                    <h3>Billing Address</h3>
+
+                    <div class="row">
+                        <div class="col-md-2"><label>Country</label></div>
+                        <div class="col-md-9">
+                            <div class="input-space">
+                                <select formControlName="country">
+                                    <option>TO DO</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-2"><label>Street</label></div>
+                        <div class="col-md-9">
+                            <input formControlName="street" type="text">
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-2"><label>City</label></div>
+                        <div class="col-md-9">
+                            <input formControlName="city" type="text">
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-2"><label>State</label></div>
+                        <div class="col-md-9">
+                            <div class="input-space">
+                                <select formControlName="state">
+                                    <option>TO DO</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-2"><label>Zip Code</label></div>
+                        <div class="col-md-9">
+                            <input formControlName="zipCode" type="text">
+                        </div>
+                    </div>
+                </div>
+
                 <div class="text-center">
                     <button type="submit" class="btn btn-info">Purchase</button>
                 </div>
